# Group98_MLOps

./: .gcloudignore  .gitignore  README.md  build_deploy_multipage_frontend.sh  cloud_deploy.sh  cloud_deploy_frontend.sh  cloudbuild.yaml  data.dvc  gcp_cpu_vertex_job.sh  models.dvc  prediction_database.csv  pyproject.toml  requirements.txt  requirements_backend.txt  requirements_dev.txt  requirements_frontend.txt  requirements_test.txt  tasks.py  vertex_train.yaml  vertex_train_gpu.yaml
.dvc/: config
.dvc/tmp/: lock
.github/workflows/: cml_data.yaml  tests.yaml
configs/: config.yaml
configs/dataset/: banking
configs/experiment/: exp1.yaml  fullfit.yaml  overfit.yaml  semifit.yaml
configs/optimizer/: adam.yaml
configs/tests/: config_test.yaml  test.yaml
configs/tests/experiment/: base.yaml
dockerfiles/: api.dockerfile  backend.dockerfile  banking_api.dockerfile  frontend.dockerfile  frontend_local.dockerfile  frontend_multipage.dockerfile  train.dockerfile  train_cloud.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
gcloud_vertex/: config_cpu.yaml  config_gpu.yaml
reports/: README.md
shell_scripts/: build_deploy_frontend.sh  build_run_backend.sh  build_run_frontend_local.sh  cloud_deploy.sh  cloud_deploy_backend.sh  cloud_deploy_multipage_frontend.sh
src/: text_test.py
src/cleaninbox/: api_backend.py  client.py  compute_statistics.py  data.py  data_statistic.py  evaluate.py  model.py  prediction.py  prediction_test_api.py  train.py
tests/: __init__.py  test_data.py  test_model.py  test_model_with_mock.py  test_train.py
(+31 files in other folders)
